--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ layout: default
       ],
     "@id": "https://www.doggettsfarm.com/",
     "name": "{{ page.title }}",
-    "text": "{{ site.description || page.description }}",
+    "description": "{{ site.description || page.description }}",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "Doggetts, Doggetts Chase",
