--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 {%- if page.title -%}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-xl">{{ page.title }}</h1>
+    <h1 class="govuk-heading-xl">{{ page.h1 || page.title }}</h1>
   </div>
 </div>
 {%- endif -%}
